{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 28,
  "lineage": "fe736810-481b-be19-869c-3db534171f20",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:vpc/vpc-069d202f6c6abf29a",
            "cidr_block": "10.126.132.128/25",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-09a0e2eab1e7b6400",
                "cidr_block": "10.126.132.128/25",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1014e76a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Kansas_UAT_DMZ_VPC"
                ]
              }
            ],
            "id": "vpc-069d202f6c6abf29a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bb4c1827d1fa0ad",
            "owner_id": "945116902499",
            "state": "available",
            "tags": {
              "Name": "Kansas_UAT_DMZ_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "aws_ecs_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8",
            "arn_suffix": "app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8",
            "dns_name": "internal-Sym-Kan-UAT-WebApp-ALB-2134875668.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8",
            "idle_timeout": 600,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Sym-Kan-UAT-WebApp-ALB",
            "security_groups": [
              "sg-02726fd3a07daa010"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045f15dc2d848718a"
              },
              {
                "subnet_id": "subnet-0c4816f7842153167"
              }
            ],
            "subnets": [
              "subnet-045f15dc2d848718a",
              "subnet-0c4816f7842153167"
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "vpc_id": "vpc-069d202f6c6abf29a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/065dc2aa67270e51",
            "certificate_arn": "arn:aws:acm:us-east-1:945116902499:certificate/981b7fa0-3b04-4995-bbb1-8b56446801a3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-webapp/1ae786098b19adfb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/065dc2aa67270e51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "listener_rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-trace/a176b27ebf2b4e26",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/065dc2aa67270e51/24f582be69b89db4",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/traceapi*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/traceapi*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener-rule/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/065dc2aa67270e51/24f582be69b89db4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/065dc2aa67270e51",
            "priority": 1
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_alb_listener.front_end",
            "aws_alb_target_group.ecs-group",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-trace/a176b27ebf2b4e26",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-WebApp-trace/a176b27ebf2b4e26",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/traceapi/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-trace/a176b27ebf2b4e26",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-WebApp-trace",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-webapp/1ae786098b19adfb",
            "arn_suffix": "targetgroup/Sym-Kan-UAT-WebApp-webapp/1ae786098b19adfb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:targetgroup/Sym-Kan-UAT-WebApp-webapp/1ae786098b19adfb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Sym-Kan-UAT-WebApp-webapp",
            "port": 443,
            "protocol": "HTTPS",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "ASG",
              "service_role": "ECS"
            },
            "target_type": "instance",
            "vpc_id": "vpc-069d202f6c6abf29a"
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "httptohttps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/eb6ec8f8b0c4906e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:945116902499:listener/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8/eb6ec8f8b0c4906e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:945116902499:loadbalancer/app/Sym-Kan-UAT-WebApp-ALB/5efa9d2552354bd8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.aws_ecs_alb",
            "aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945116902499:security-group/sg-02726fd3a07daa010",
            "description": "Security Group for ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02726fd3a07daa010",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Sym-Kan-UAT-WebApp-SG",
            "name_prefix": null,
            "owner_id": "945116902499",
            "revoke_rules_on_delete": false,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "backup_vault": "-N/A-",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "Production",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_name": "SG",
              "service_role": "ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-069d202f6c6abf29a"
          }
        }
      ]
    }
  ]
}